spade-tests/src/snapshots/spade_tests__linear_check__array_index_linear_type_with_non_const_is_error.snap
---
source: spade-tests/src/linear_check.rs
---
entity test() {
    let idx = 0;
    let a = [inst new_mut_wire(), inst new_mut_wire()];
    set a[idx] = 0u8;
}


error: Array with mutable wires cannot be indexed by non-constant values
  ┌─ testinput:4:9
  │
4 │     set a[idx] = 0u8;
  │         ^^^^^^
  │         │ │
  │         │ Expected constant
  │         Array with mutable wires indexed by non-constant
